# rustorch

./: .env  .gitignore  .mcp.json  API_PROTECTION_PROPOSAL.md  AUTORELEASEPOOL_FAILURE_ANALYSIS.md  BENCHMARK_REPORT.md  CHANGELOG.md  CI_FIX_APPLIED.md  COMPILATION_FIXES.md  COMPILATION_FIXES_SUMMARY.md  CRITICAL_FINDING.md  Cargo.toml  DEBUGGING_PLAN.md  DEBUGGING_SUMMARY.md  DEBUG_ANALYSIS.md  DOCTEST_REPORT.md  Dockerfile  EXAMPLES_EXECUTION_REPORT.md  FINAL_CONCLUSION.md  METAL_BLOCKED_STATUS.md  METAL_GPU_DEBUGGING_STATUS.md  METAL_GPU_ROOT_CAUSE_ANALYSIS.md  METAL_RAII_STATUS.md  MODEL_LOADING_TEST.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  PYTHON_INTEGRATION_PLAN.md  PYTORCH_COMPATIBILITY.md  QUICK_START.md  README.md  README_COREML_JUPYTER.md  README_JUPYTER.md  README_REFACTORING.md  REFACTORING_PROGRESS.md  REFACTORING_ROADMAP.md  REFACTORING_TASKS.md  build.rs  build_wasm.sh  clippy_refactoring_plan.md  clippy_refactoring_summary.md  (+31 more)
.cargo/: audit.toml  config.toml
.claude/: git_workflow.md  session_2025_08_26.md  session_2025_08_26_complete.md  session_2025_08_26_summary.md  settings.local.json  stable_milestone_2025_08_26.md
.serena/: project.yml
benches/: README.md  advanced_gpu_benchmark.rs.disabled  advanced_optimizer_benchmark.rs  autograd_ops.rs  distributed_benchmark.rs  distributions_benchmark.rs  fft_benchmark.rs  final_performance_test.rs  gpu_cpu_performance.rs  gpu_integration.rs  gpu_kernel_performance.rs  integrated_performance.rs  manual_quick_bench.rs  matrix_decomp_micro_bench.rs  matrix_decomposition_benchmark.rs  memory_optimization.rs  memory_performance_refactored.rs  memory_pool.rs  memory_strategy_performance.rs  metal_benchmark.rs  metal_gpu_performance.rs  micro_distributions_benchmark.rs  mixed_precision_benchmark.rs  multi_gpu_benchmark.rs  neural_networks.rs  nn_benchmark.rs  optimization_benchmark.rs  optimized_matrix_benchmark.rs  optimized_ops.rs  parallel_ops.rs  parallel_performance.rs  performance_benchmarks.rs  performance_comparison.rs  phase3_benchmarks.rs  phase4_benchmarks.rs  quick_benchmark.rs  quick_distributions_benchmark.rs  quick_matrix_benchmark.rs  simd_performance.rs  simd_performance_refactored.rs  (+7 more)
benchmark_analysis/: benchmark_report.html  benchmark_results.json  benchmark_summary.csv
benchmark_runner/: all.html  fn.main.html  index.html
benchmarks/: Cargo.toml  README.md  run_benchmarks.sh
benchmarks/performance_records/: 2025-01-27_comprehensive_backend_comparison.md
benchmarks/src/: comprehensive_gpu_benchmark.rs  coreml_advantage_benchmark.rs  cuda_performance_demo.rs  device_performance_comparison.rs  distribution_performance_test.rs  gpu_benchmark.rs  gpu_performance_demo.rs  metal_coreml_heavy_benchmark.rs  metal_performance_demo.rs  performance_test.rs  quick_metal_coreml_benchmark.rs  simple_performance_demo.rs  wasm_performance_test.js
binder/: environment.yml  postBuild
claudedocs/: CLI_DEBUG_SESSION_20251011.md  CRITICAL_FINDINGS_20251011.md  CURRENT_STATUS_SUMMARY_20251011.md  DEBUGGING_SUMMARY_Q8_20251011.md  EMBEDDING_LAYER_ANALYSIS_20251011.md  FINAL_DIAGNOSIS_Q8_SCALE_BUG.md  INVESTIGATION_SUMMARY_20251011.md  LAYER_COMPARISON_20251011.md  METAL_BACKEND_INVESTIGATION_20251011.md  Q4K_INVESTIGATION_FINAL_CONCLUSION.md  Q4K_vs_Q5K_layer_comparison.md  (+27 more)
example-cli/: Cargo.toml  README.md  run-cli.sh
example-cli/benches/: backend_comparison.rs  inference_benchmark.rs
example-cli/docs/: COMPLETE_IMPLEMENTATION_PLAN.md  CONFIG.md  EXAMPLES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  REQUIREMENTS.md  TROUBLESHOOTING.md
example-cli/examples/: test_tokenization.rs
example-cli/src/: lib.rs  main.rs
example-cli/src/backend/: cpu.rs  cuda.rs  hybrid.rs  hybrid_f32.rs  metal.rs  mod.rs  opencl.rs
example-cli/src/cli/: args.rs  commands.rs  mod.rs  repl.rs  tui.rs
example-cli/src/download/: huggingface.rs  manager.rs  mod.rs  ollama.rs  progress.rs
example-cli/src/metrics/: mod.rs  reporter.rs  timing.rs
example-cli/src/model/: backend_loader.rs  format_loader.rs  inference.rs  loader.rs  mod.rs  sampling.rs  transformer.rs
example-cli/src/model/architectures/: attention.rs  feedforward.rs  gpt.rs  layer_norm.rs  mod.rs  positional_encoding.rs
example-cli/src/model/formats/: gguf.rs  mlx.rs  mod.rs  onnx.rs  pytorch.rs  safetensors.rs  tensor_loader.rs
example-cli/src/model/loaders/: gguf_loader.rs  mlx_loader.rs  mod.rs  safetensors_loader.rs
example-cli/src/session/: config.rs  history.rs  mod.rs
example-cli/src/tokenizer/: gguf_tokenizer.rs  llama_spm.rs  mod.rs  wrapper.rs
example-cli/src/utils/: config.rs  error.rs  logger.rs  mod.rs  progress.rs
python/: .gitignore  CLEANUP_SUMMARY.md  Cargo.toml  Dockerfile  PYTHON_BINDINGS_API_PLAN.md  README.md  USAGE_EXAMPLES.md  build.rs  check_python.py  pyproject.toml  setup_build.py  test_advanced.py  test_basic.py  test_minimal.py  test_phase4_complete.py  test_phase4_final.py
python/.cargo/: config.toml
python/docs/: PHASE4_IMPLEMENTATION_PLAN.md  PHASE5_COMPLETION.md  PYTHON_BINDINGS_API_PLAN.md  REFACTORING_COMPLETION.md  REFACTORING_PLAN.md  REFACTORING_STRATEGY.md
python/python/: PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_IMPLEMENTATION_PLAN.md
python/python/rustorch/: __init__.py  nn.py
python/src/: callbacks.rs  core.rs  errors.rs  lib.rs  lib_broken.rs  lib_complex.rs.backup  lib_minimal.rs  lib_simple.rs  nn.rs  optim.rs  tensor.rs  variable.rs
python/src/core/: errors.rs  mod.rs  tensor.rs  tensor_working.rs  variable.rs
python/src/nn/: activation.rs  loss.rs  mod.rs
python/src/nn/layers/: conv.rs  dropout.rs  flatten.rs  linear.rs  mod.rs  norm.rs
python/src/optim/: adam.rs  mod.rs  sgd.rs
python/tests/: test_direct.py  test_fixes_simple.py  test_phase2.py  test_phase2_demo.py  test_phase3.py  test_phase4_adam.py  test_phase4_batchnorm.py  test_phase4_cnn.py  test_phase4_dropout.py  test_phase5_autograd.py  test_refactored_structure.py  test_simple.py
rustorch-macros/: Cargo.toml
rustorch-macros/src/: lib.rs
rustorch-macros/tests/: integration_tests.rs
(+3507 files in other folders)
