[package]
name = "rustorch-py"
version = "0.3.3"
edition = "2021"
authors = ["Jun Suzuki <jun.suzuki.japan@gmail.com>"]
description = "Python bindings for RusTorch deep learning library"

[workspace]

[lib]
name = "_rustorch_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rustorch = { path = "..", default-features = false }
num-traits = "0.2"
ndarray = "0.16"

[build-dependencies]
pyo3-build-config = "0.24.1"